--- a/src/app/login/signup/signup.component.scss
+++ b/src/app/login/signup/signup.component.scss
@@ -1,3 +1,7 @@
-.signup-button {
-  margin-left: .1vw
+.signup-form {
+  overflow: hidden;
+
+  .signup-button {
+    margin-left: .1vw
+  }
 }
